--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/margherita_pizza.html">Margherita Pizza</a>
+    <br>
+    <a href="./recipes/cacio_e_pepe.html">Cacio e Pepe</a>
+    <br>
+    <a href="./recipes/lemon_posset.html">Lemon Posset</a>
 </body>
 </html>
