filled out relevant information for new recipes

--- a/recipes/lemon_posset.html
+++ b/recipes/lemon_posset.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Lemon Posset</h1>
+    <img src="../images/lemon_posset.jpg">
+    <h4>Description</h4>
+    <p>Making your own, individual citrus set puddings is even more impressive when served with homemade sugared-almond shortbread for scooping out the cream</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>600ml double cream</li>
+        <li>200g golden caster sugar</li>
+        <li>zest 3 lemons, plus 75ml juice</li>
+        <p>For the shortbread</p>
+        <li>140g cold butter, diced</li>
+        <li>140g plain flour</li>
+        <li>85g golden caster sugar, plus extra for dusting</li>
+        <li>50g ground rice (or plain if you can't find rice flour)</li>
+        <li>85g flaked almond</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Make the posset first. Put the cream in a big saucepan with the sugar and gently heat, stirring, until the sugar has melted. Bring to a simmer and bubble for 1 min. Turn off the heat and stir in the lemon zest and juice. Divide between pots or bowls, cool to room temperature, then carefully cover and chill for at least 3 hrs, or up to 24 hrs.</li>
+        <li>To make the shortbread, heat oven to 160C/140C fan/gas 3. Whizz the butter and flour together in a food processor until no lumps of butter remain (or rub together with your fingertips). Tip into a bowl and stir in the sugar, ground rice and almonds. Line the base of a roughly 22cm square tin with baking parchment. Tip in the mixture and press it down firmly, making it as flat as you can. Dredge with more sugar and bake for 25-30 mins until pale golden. Cool in the tin.</li>
+        <li>Cut the shortbread into shards and serve with the possets and little spoons.</li>
+    </ol>
 </body>
 </html>
