--- a/recipes/cacio_e_pepe.html
+++ b/recipes/cacio_e_pepe.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Cacio e Pepe</h1>
+    <img src="../images/cacio_e_pepe.jpg">
+    <h4>Description</h4>
+    <p>Whip up a simple cacio e pepe for a speedy lunch. With four simple ingredients – spaghetti, pepper, parmesan and butter – this is a storecupboard favourite.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>200g bucatini or spaghetti</li>
+        <li>25g butter</li>
+        <li>2 tsp whole black peppercorns, ground, or 1 tsp freshly ground black pepper</li>
+        <li>50g pecorino or parmiggiano regiano, finely grated</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Cook the pasta for 2 mins less than pack instructions state, in salted boiling water. Meanwhile, melt the butter in a medium frying pan over a low heat, then add the ground black pepper and toast for a few minutes.</li>
+        <li>Drain the pasta, keeping 200ml of the pasta water. Tip the pasta and 100ml of the pasta water into the pan with the butter and pepper. Toss briefly, then scatter over the parmesan evenly, but don’t stir – wait for the cheese to melt for 30 seconds, then once melted, toss everything well, and stir together. This prevents the cheese from clumping or going stringy and makes a smooth, shiny sauce. Add a splash more pasta water if you need to, to loosen the sauce and coat the pasta. Serve immediately with a good grating of black pepper.</li>
+    </ol>
 </body>
 </html>
