changed some metadata and title at main menu

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Joe-din recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Joe-din Recipes</h1>
     <a href="./recipes/margherita_pizza.html">Margherita Pizza</a>
     <br>
     <a href="./recipes/cacio_e_pepe.html">Cacio e Pepe</a>
