--- a/recipes/margherita_pizza.html
+++ b/recipes/margherita_pizza.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Joe's pizza</title>
 </head>
 <body>
     <h1>Margherita Pizza</h1>
